# HotNCold

./: .gitignore  CMakeLists.txt  README.md
include/: Grid.h  GridRenderer.h  Solver.h
src/: Grid.cpp  Grid.h  GridRenderer.cpp  Solver.cpp  main.cpp
